[tool.poetry]
name = "materiality"
version = "0.0.1"
description = ""
authors = ["Daniel \"Drex\" Drexler <aeturnum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydriller = "^1.11"
pytest = "^5.3.5"
pydeps = "^1.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.761"
rope = "^0.14.0"
taskipy = "^1.0.1"

[tool.taskipy.tasks]
test = "py.test"
post_test = "task lint"

lint = "task lint_pylint && task lint_mypy"
lint_pylint = "pylint tests {{project_name}}"
lint_mypy = "mypy tests {{project_name}}"

pre_publish = "./task test"
publish = "poetry publish --build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
